fixed nav icon and menu alignment

--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -4,12 +4,12 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  margin-bottom: 4rem;
+  margin: 1rem 0.5rem 5rem 0.5rem;
 }
 
 .header-hamburger-button {
-  height: 125px;
-  width: 125px;
+  height: 50px;
+  width: auto;
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -27,12 +27,11 @@
   text-decoration: none;
 }
 .logo {
-  height: 125px;
-  width: 125px;
-  padding-right: 40px;
+  height: 50px;
   padding-bottom: 8px;
+  padding-right: 24px;
   flex-grow: 1;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
 }
